--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,6 @@
 		"ezyang/htmlpurifier" : "v4.13.0",
 		"easyswoole/http-client" : "1.4.3",
 		"auron-consulting-oss/php-console-logger" : "v2.0.0",
-		"easyswoole/easyswoole" : "dev-wswoole",
 		"adriansuter/php-autoload-override": "1.0",
 		"clue/socks-react": "v1.2.0",
 		"doctrine/instantiator": "1.3.1",
@@ -67,7 +66,10 @@
 		"webmozart/assert": "1.9.1",
 		"lcobucci/jose-parsing": "2.2.0",
 		"philipbrown/signature-php": "v5.1.2",
-		"lcobucci/jwt": "4.0.0-alpha3"
+		"lcobucci/jwt": "4.0.0-alpha3",
+		"easyswoole/spl": "1.3.7",
+		"easyswoole/component": "2.2.3",
+		"wangrunxinyes/easyswoole": "dev-wswoole"
 	},
 	"minimum-stability" : "dev",
 	"repositories" : [{
