--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,6 @@
 		"easyswoole/http" : "1.7.15",
 		"easyswoole/trace" : "1.1.17",
 		"swoole/ide-helper" : "4.5.6",
-		"easyswoole/kafka" : "1.0.6",
-		"easyswoole/queue" : "2.x-dev",
 		"easyswoole/phpunit" : "1.0.10",
 		"ezyang/htmlpurifier" : "v4.13.0",
 		"easyswoole/http-client" : "1.4.3",
@@ -21,7 +19,7 @@
 		"easyswoole/ddl": "1.0.9",
 		"easyswoole/mysqli": "2.x-dev",
 		"easyswoole/pool": "1.0.11",
-		"easyswoole/redis-pool": "2.x-dev",
+		"easyswoole/redis-pool": "2.1.0",
 		"easyswoole/template": "1.0.8",
 		"evenement/evenement": "v3.0.1",
 		"myclabs/deep-copy": "1.x-dev",
