--- a/composer.json
+++ b/composer.json
@@ -68,7 +68,7 @@
 		"lcobucci/jwt": "4.0.0-alpha3",
 		"easyswoole/spl": "1.3.7",
 		"easyswoole/component": "2.2.3",
-		"wangrunxinyes/easyswoole": "dev-wswoole"
+		"wangrunxinyes/easyswoole": "1.0.1"
 	},
 	"minimum-stability" : "dev",
 	"autoload" : {
